--- a/locations.html
+++ b/locations.html
@@ -33,7 +33,7 @@ li a:hover {
 }
 </style>
 <ul class="navbar">
-  <li><a href="home.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a href="musicmaps.html">Map</a></li>
   <li><a href="locations.html">Locations</a></li>
   <li><a href="aboutUs.html">About Us</a></li>
