--- a/locations.html
+++ b/locations.html
@@ -56,6 +56,27 @@ li a:hover {
 https://en.wikipedia.org/wiki/Brill_Building</a> </p>
 <h4>Carnegie Hall</h4>
 <p>881 7th Ave</p>
+<img src="http://www.jessicasandidge.com/uploads/3/6/1/6/3616998/_4320010.jpg">
+<p>Built in 1891 by Andrew Carnegie with the architect William Burnet Tuthill, Carnegie Hall is a large concert venue with three auditoriums. It regularly hosts concerts and other events for people of all ages. Some notable performers have been pianist and composer Sergei Rachmaninoff, performer Judy Garland, Reverend Dr. Martin Luther King Jr., Leonard Bernstein, and more.</p>
+<p>Attribution: Carnegie Hall, <a href="http://www.carnegiehall.org/">
+http://www.carnegiehall.org/ </a> </p>
+<h4>CBGB</h4>
+<p>315 Bowery, New York, 10003</p>
+<img src="https://s-media-cache-ak0.pinimg.com/236x/20/0f/32/200f321300b33551bbe721fec3cac67f.jpg">
+<p>CBGB was founded by Hilly Kristal in 1973. The letters stood for Country Bluegrass and Blues, which was what Kristal intended, but instead became a place for punk rock and new wave bands to perform such the Ramones, Blondie, Talking Heads, Misfits, Television, Patti Smith Group, The Dead Boys, The Dictators, The Cramps, and Joan Jett. </p>
+<p>Attribution: CBGB, <a href="http://www.cbgb.com/">http://www.cbgb.com/</a> </p> 
+<h4>Louis Armstrong House</h4>
+<p>34-56 107th Street, Corona</p>
+<img src="https://jazzlives.files.wordpress.com/2012/03/louis-house-outside.jpeg">
+<p>In 1943, Louis Armstrong and his wife, Lucille, settled in a modest house in Corona, Queens, where they lived for the remainder of their lives. No one has lived in the house since the Armstrongs, and the house and its furnishings remain very much as they were during Louis and Lucille’s lifetime. Today, the Louis Armstrong House Museum is open to the public, offering guided tours of Louis’s longtime home. On the tour, audio clips from Louis’s homemade recordings are played, and visitors hear Louis practicing his trumpet, enjoying a meal, or talking with his friends. Visitors also get to enjoy an exhibit on Louis’s life and legacy, and the Armstrongs’ beautiful Japanese-inspired garden.</p>
+<p>Attribution: Louis Armstrong House, <a href="http://www.louisarmstronghouse.org/">http://www.louisarmstronghouse.org/</a> </p>
+<h4>Tin Pan Alley</h4>
+<p>28th street between 5th Avenue and Broadway</p>
+<img src="https://duckduckgo.com/i/3b925012.jpg">
+<p>These buildings were where a collection of New York City music publishers and songwriters who dominated the popular music of the United States in the late 19th century and early 20th century set up shop. A plaque exists on the sidewalk on 28th Street between Broadway and Sixth that commemorates it. The alley continued into the 1950s when earlier styles of American popular music were upstaged by the rise of rock & roll.</p>
+<p>Attribution: Tin Pan Alley, <a href="https://en.wikipedia.org/wiki/Tin_Pan_Alley">https://en.wikipedia.org/wiki/Tin_Pan_Alley</a> </p> 
+
+
 
 </body>
 </html>
