--- a/musicmaps.html
+++ b/musicmaps.html
@@ -167,7 +167,7 @@
             '30 W. 21st St., New York'+ '<br>' +
             '<img src="http://s3.amazonaws.com/cms_uploads/liz/twilo.jpg">'+
             '<div id="bodyContent6">'+
-            '<p>Danceteria was a well-known four-floor nightclub located in New York City which operated from 1979 until 1986. It catered to a diverse after-hours crowd coming from the downtown rock clubs Mudd Club, Trax, TR3, Chinese Chance and CBGB. Madonna, the Beastie Boys and Keith Haring all began their careers at this famed '80s dance club. It's also where British acts as enduring as the Smiths took their first NYC bows. Now the space is occupied by a showroom for high-end granite and marble products.</p>'+
+            "<p>Danceteria was a well-known four-floor nightclub located in New York City which operated from 1979 until 1986. It catered to a diverse after-hours crowd coming from the downtown rock clubs Mudd Club, Trax, TR3, Chinese Chance and CBGB. Madonna, the Beastie Boys and Keith Haring all began their careers at this famed 80s dance club. It's also where British acts as enduring as the Smiths took their first NYC bows. Now the space is occupied by a showroom for high-end granite and marble products.</p>"+
             '<p>Attribution: Danceteria, <a href="https://en.wikipedia.org/wiki/Danceteria">'+
             'https://en.wikipedia.org/wiki/Danceteria</a> </p> '
             '</div>'+
