--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ li a:hover {
 <body>
 <div class="jumbotron">
   <div class="container">
-    <h1><img src="http://imgur.com/a/ohSaj" /> Music Maps</h1> <br>
+    <h1> Music Maps</h1> <img src="http://imgur.com/a/ohSaj" /> <br>
     <p>Discover the coolest music related sites in New York City. </p>
   </div>
 </div>
