--- a/musicmaps.html
+++ b/musicmaps.html
@@ -71,7 +71,9 @@
     </style>
   </head>
   <body>
-    <h1>The Map</h1>
+    <h1 align="middle">The Map <br>
+    <img src="http://imgur.com/LQG0v9T" align="middle">
+    </h1>
     <div id="map"></div>
     <script>
       // Note: This example requires that you consent to location sharing when
