--- a/musicmaps.html
+++ b/musicmaps.html
@@ -93,6 +93,7 @@
         var sedgwick= {lat: 40.847061 , lng: -73.924536};
         var apollo= {lat: 40.810018  , lng: -73.950056};
         var vanguard= {lat: 40.73603  , lng: -74.001686};
+        var cafewha= {lat: 40.7301  , lng: -74.0006};
 
 
 
@@ -210,6 +211,19 @@
               'https://en.wikipedia.org/wiki/Village_Vanguard</a> </p> '
               '</div>'+
               '</div>';
+               var content10= '<div id="content9">'+
+              '<div id="siteNotice">'+
+              '</div>'+
+              '<h1 id="firstHeading" class="firstHeading">Cafe Wha?</h1>'+
+              '115 Macdougal St' + '<br>' +
+              '<img src="https://beatchickwrites.files.wordpress.com/2014/12/village-vanguard-interior.jpg?w=300&h=189">'+
+              '<div id="bodyContent9">'+
+              "<p>The Village Vanguard is a jazz club that was opened on February 22, 1935 by Max Gordon. At first, it featured many forms of music, such as folk music and beat poetry, but it switched to an all-jazz format in 1957. This club has helped unknown musicians, such as Thelonious Monk, launch their careers.Well known musicians such as John Coltrane and Bill Evans were regulars and recorded many songs there as well. In 1989, Max Gordon died. The day after, Lorraine Gordon closed the Vanguard. But the following day, she reopened it and has continued to run the place ever since. She has not made any alterations of any kind, and kept it how it was, how people liked it.Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>"+
+              '<p>Attribution: Cafe Wha?, <a href="cafewha.com">'+
+              'cafewha.com</a> </p> '
+              '</div>'+
+              '</div>';
+              
 
 
         //calls the infowindows
@@ -239,6 +253,9 @@
         });
         var infowindow9 = new google.maps.InfoWindow({
           content: content9
+        });
+         var infowindow10 = new google.maps.InfoWindow({
+          content: content10
         });
 
 
@@ -324,6 +341,15 @@
         });
         marker9.addListener('click', function() {
           infowindow9.open(map, marker9);
+        });
+        var marker8 = new google.maps.Marker({
+          position: cafewha,
+          icon: image,
+          map: map,
+          title: 'Cafe Wha?'
+        });
+        marker10.addListener('click', function() {
+          infowindow10.open(map, marker10);
         });
 
         // Try HTML5 geolocation.
