--- a/locations.html
+++ b/locations.html
@@ -70,6 +70,12 @@ http://www.carnegiehall.org/ </a> </p>
 <img src="https://jazzlives.files.wordpress.com/2012/03/louis-house-outside.jpeg">
 <p>In 1943, Louis Armstrong and his wife, Lucille, settled in a modest house in Corona, Queens, where they lived for the remainder of their lives. No one has lived in the house since the Armstrongs, and the house and its furnishings remain very much as they were during Louis and Lucille’s lifetime. Today, the Louis Armstrong House Museum is open to the public, offering guided tours of Louis’s longtime home. On the tour, audio clips from Louis’s homemade recordings are played, and visitors hear Louis practicing his trumpet, enjoying a meal, or talking with his friends. Visitors also get to enjoy an exhibit on Louis’s life and legacy, and the Armstrongs’ beautiful Japanese-inspired garden.</p>
 <p>Attribution: Louis Armstrong House, <a href="http://www.louisarmstronghouse.org/">http://www.louisarmstronghouse.org/</a> </p>
+<h4>Madison Square Garden</h4>
+<p>4 Pennsylvania Plaza</p>
+<img src="http://s2.dmcdn.net/Wx7u4/280x157-B_w.jpg">
+<p>Madison Square Garden is an indoor arena, located on top of Pennsylvania Station. Many concerts are held there, as well  It is very large, holding up to 20,000 people, and is the third busiest music arena in the world. Many famous musicians have played at Madison Square Garden, including Elton John, Whitney Houston, Billy Joel, Michael Jackson, and Taylor Swift. John Lennon made his last concert appearance at Madison Square Garden before his death in 1980.</p>
+<p>Attribution: Wikipedia, <a href="https://en.wikipedia.org/wiki/Madison_Square_Garden">https://en.wikipedia.org/wiki/Madison_Square_Garden</a></p>
+
 <h4>Tin Pan Alley</h4>
 <p>28th street between 5th Avenue and Broadway</p>
 <img src="https://duckduckgo.com/i/3b925012.jpg">
