--- a/locations.html
+++ b/locations.html
@@ -86,12 +86,13 @@ http://www.carnegiehall.org/ </a> </p>
 <p>222 W 23rd St</p>
 <img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">
 <p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>
-<p>Attribution: Chelsea Hotel, <a href="https://en.wikipedia.org/wiki/Hotel_Chelsea>https://en.wikipedia.org/wiki/Hotel_Chelsea</a></p>
+<p>Attribution: Chelsea Hotel, <a href="https://en.wikipedia.org/wiki/Hotel_Chelsea">https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p>
 
 <h4>Cafe Wha?</h4>
 <p>115 Macdougal St</p>
 <img src="http://es-img1.ciao.com/ies/images/products/normal/610/product-2281610.jpg">
 <p>Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
 <p>Attribution: Cafe Wha?, <a href=cafewha.com>cafewha.com</a></p>
+
 </body>
 </html>
