--- a/locations.html
+++ b/locations.html
@@ -91,7 +91,7 @@ http://www.carnegiehall.org/ </a> </p>
 <h4>Cafe Wha?</h4>
 <p>115 Macdougal St</p>
 <img src="http://es-img1.ciao.com/ies/images/products/normal/610/product-2281610.jpg">
-<p>Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
+<p>Cafe Wha? is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
 <p>Attribution: Cafe Wha?, <a href=cafewha.com>cafewha.com</a></p>
 
 </body>
