--- a/musicmaps.html
+++ b/musicmaps.html
@@ -220,33 +220,30 @@
               '115 Macdougal St' + '<br>' +
               '<img src="http://tse3.mm.bing.net/th?id=OIP.Me96779ddf33959dd450dbd06c9efc7d0o0&w=230&h=170&rs=1&pcl=dddddd&pid=1.1">'+
               '<div id="bodyContent10">'+
-              "<p>Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. 
-
- </p>"+
+              "<p>Cafe Wha is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>"+
               '<p>Attribution: Cafe Wha?, <a href="cafewha.com">'+
               'cafewha.com</a> </p> '
               '</div>'+
               '</div>';
-                var content11= '<div id="content11">'+
+              var content11= '<div id="content11">'+
               '<div id="siteNotice">'+
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Hotel Chelsea</h1>'+
               '222 W 23rd St' + '<br>' +
               '<img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">'+
-              '<div id="bodyContent10">'+
-              "<p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. 
-            </p>"+
+              '<div id="bodyContent11">'+
+              "<p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>"+
               '<p>Attribution: Wikipedia, <a https://en.wikipedia.org/wiki/Hotel_Chelsea">'+
               'https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p> '
               '</div>'+
               '</div>';
-          var content12 = '<div id="content12">'+
+              var content12 = '<div id="content12">'+
               '<div id="siteNotice">'+
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">Madison Square Garden</h1>'+
               '4 Pennsylvania Plaza' + '<br>' +
               '<img src="http://s2.dmcdn.net/Wx7u4/280x157-B_w.jpg">'+
-              '<div id="bodyContent9">'+
+              '<div id="bodyContent12">'+
               "<p>Madison Square Garden is an indoor arena, located on top of Pennsylvania Station. Many concerts are held there, as well  It is very large, holding up to 20,000 people, and is the third busiest music arena in the world. Many famous musicians have played at Madison Square Garden, including Elton John, Whitney Houston, Billy Joel, Michael Jackson, and Taylor Swift. John Lennon made his last concert appearance at Madison Square Garden before his death in 1980. </p>"+
               '<p>Attribution: Madison Square Garden, <a href="https://en.wikipedia.org/wiki/Madison_Square_Garden">'+
               'https://en.wikipedia.org/wiki/Madison_Square_Garden</a> </p> '
@@ -286,6 +283,9 @@
         });
         var infowindow11 = new google.maps.InfoWindow({
           content: content11
+        });
+        var infowindow12 = new google.maps.InfoWindow({
+          content: content12
         });
 
         //creates markers
