--- a/musicmaps.html
+++ b/musicmaps.html
@@ -72,7 +72,7 @@
   </head>
   <body>
     <h1 align="middle">The Map <br>
-    <img src="http://imgur.com/LQG0v9T" align="middle">
+    <img src="logo.png" align="middle">
     </h1>
     <div id="map"></div>
     <script>
