--- a/musicmaps.html
+++ b/musicmaps.html
@@ -71,7 +71,7 @@
     </style>
   </head>
   <body>
-    <h1 align="middle">The Map <br>
+    <h1 align="middle">
     <img src="logo.png" align="middle">
     </h1>
     <div id="map"></div>
