--- a/musicmaps.html
+++ b/musicmaps.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="SHORTCUT ICON" href="logo.png"/>
+  <title>Music Maps</title>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" href="musicmaps.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -71,8 +73,8 @@
     </style>
   </head>
   <body>
-    <h1 align="middle">
-    <img src="logo.png" align="middle">
+    <h1 align="middle">The Map <br>
+    <img src="http://imgur.com/LQG0v9T" align="middle">
     </h1>
     <div id="map"></div>
     <script>
