--- a/musicmaps.html
+++ b/musicmaps.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="musicmaps.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Music Maps</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 
@@ -73,7 +72,7 @@
     </style>
   </head>
   <body>
-    <h1 align="middle">The Map <br>
+    <h1 align="middle"> <br>
     <img src="http://imgur.com/LQG0v9T" align="middle">
     </h1>
     <div id="map"></div>
