--- a/locations.html
+++ b/locations.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+      <link rel="SHORTCUT ICON" href="logo.png"/>
+  <title>Music Maps</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="musicmaps.css">
@@ -39,7 +42,7 @@ li a:hover {
   <li><a href="aboutUs.html">About Us</a></li>
 
 </ul>
-
+</head>
 <body>
 <h1> Locations </h1>
 <br><br>
