--- a/musicmaps.html
+++ b/musicmaps.html
@@ -72,8 +72,8 @@
     </style>
   </head>
   <body>
-    <h1 align="middle"> <br>
-    <img src="logo.png" align="middle">
+    <h1 align="middle">
+    <img src="logo.png">
     </h1>
     <div id="map"></div>
     <script>
