--- a/musicmaps.html
+++ b/musicmaps.html
@@ -72,9 +72,8 @@
     </style>
   </head>
   <body>
-    <h1 align="middle">
-    <img src="logo.png">
-    </h1>
+    <img src="logo.png" align="middle">
+    
     <div id="map"></div>
     <script>
       // Note: This example requires that you consent to location sharing when
