--- a/musicmaps.html
+++ b/musicmaps.html
@@ -72,8 +72,9 @@
     </style>
   </head>
   <body>
-    <img src="logo.png" align="middle">
-    
+    <align="middle">
+    <img src="logo.png">
+    </align>
     <div id="map"></div>
     <script>
       // Note: This example requires that you consent to location sharing when
