--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="SHORTCUT ICON" href="logo.png"/>
+  <title>Music Maps</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="musicmaps.css">
@@ -64,7 +66,7 @@ li a:hover {
             <div class="col-md-4">
               <h3>Try It Out</h3>
               <p> <a href="musicmaps.html"> Click here</a> if you want to try out the map!</p>
-
+              <img src="logo.png">
             </div>
         </div>
    </div>
