--- a/aboutUs.html
+++ b/aboutUs.html
@@ -51,7 +51,8 @@ li a:hover {
 <br>
 <img src="gwc.jpg"> <br><br>
 <p class="aboutusinfo">Both Megan and Ruby participated in the <a href="girlswhocode.com">Girls Who Code</a> summer immersion program, a seven-week course dedicated to teaching high school girls the basics of computer science. As part of the course, they had to work in groups to complete a final project. Both of them are very passionate about New York City, and wanted to get the opportunity to help other people learn more about it. They decided to make Music Maps, which marks the locations of music related sites within the city. They really enjoyed doing this, and in the process were able to learn so much about both music and the history of New York City. </p>
-<p> Contact Us</p></div>
+<br>
+<h2> Contact Us </h2></div>
 <div class="welcome">
    <div class="container">
         <div class="row">
