--- a/locations.html
+++ b/locations.html
@@ -44,7 +44,7 @@ li a:hover {
 </ul>
 </head>
 <body>
-<h1> Locations </h1>
+<h1 class="center"> Locations </h1>
 <br><br>
 <div class="locations">
 <h4>The Apollo Theater</h4>
