--- a/locations.html
+++ b/locations.html
@@ -45,7 +45,7 @@ li a:hover {
 </head>
 <body>
 <h1 class="center"> Locations </h1>
-<br><br>
+<br>
 <div class="locations">
 <h4>The Apollo Theater</h4>
 <p>253 W 125th St</p>
@@ -53,51 +53,72 @@ li a:hover {
 <p>Located in Harlem, the Apollo opened in 1933 and was a main player in the birth of jazz, swing, bebop, R&B, gospel, blues, and soul. They continue to host their famous Amateur Night several times, a month, as well as other performances and also educational opportunities. Many famous musicians have had the opportunity to perform at the Apollo, including Ella Fitzgerald, Sarah Vaughan, Billie Holiday, James Brown, Jimi Hendrix, and Michael Jackson.</p>
 <p>Attribution: Apollo Theater, <a href="https://www.apollotheater.org/">https://www.apollotheater.org/ </a> </p>
 </div>
+
+<div class="locations">
 <h4>Brill Building</h4>
 <p>1619 Broadway, New York</p>
 <img src="http://farm2.static.flickr.com/1026/559416457_f0bce671cc_m.jpg">
 <p>The Brill Building is famous for housing music industry offices and studios where some of the most popular American music tunes of the 1940s to the 1960s were written. The songwriting team of Leiber and Stoller (Jerry Leiber and Mike Stoller), for example, composed a surprising number of hits for early R&B singers, including the Elvis Presley hits 'Hound Dog', 'Jailhouse Rock', and 'Treat Me Nice'. Scores of music publishers had offices in the Brill Building. Songs produced in this building were constantly at the top of Billboard's Hit Parade and played by the leading bands of the day.</p>
 <p>Attribution: Brill Building, <a href="https://en.wikipedia.org/wiki/Brill_Building">
 https://en.wikipedia.org/wiki/Brill_Building</a> </p>
+</div>
+
+<div class="locations">
 <h4>Carnegie Hall</h4>
 <p>881 7th Ave</p>
 <img src="http://www.jessicasandidge.com/uploads/3/6/1/6/3616998/_4320010.jpg">
 <p>Built in 1891 by Andrew Carnegie with the architect William Burnet Tuthill, Carnegie Hall is a large concert venue with three auditoriums. It regularly hosts concerts and other events for people of all ages. Some notable performers have been pianist and composer Sergei Rachmaninoff, performer Judy Garland, Reverend Dr. Martin Luther King Jr., Leonard Bernstein, and more.</p>
 <p>Attribution: Carnegie Hall, <a href="http://www.carnegiehall.org/">
 http://www.carnegiehall.org/ </a> </p>
+</div>
+
+<div class="locations">
 <h4>CBGB</h4>
 <p>315 Bowery, New York, 10003</p>
 <img src="https://s-media-cache-ak0.pinimg.com/236x/20/0f/32/200f321300b33551bbe721fec3cac67f.jpg">
 <p>CBGB was founded by Hilly Kristal in 1973. The letters stood for Country Bluegrass and Blues, which was what Kristal intended, but instead became a place for punk rock and new wave bands to perform such the Ramones, Blondie, Talking Heads, Misfits, Television, Patti Smith Group, The Dead Boys, The Dictators, The Cramps, and Joan Jett. </p>
 <p>Attribution: CBGB, <a href="http://www.cbgb.com/">http://www.cbgb.com/</a> </p> 
+</div>
+
+<div class="locations">
 <h4>Louis Armstrong House</h4>
 <p>34-56 107th Street, Corona</p>
 <img src="https://jazzlives.files.wordpress.com/2012/03/louis-house-outside.jpeg">
 <p>In 1943, Louis Armstrong and his wife, Lucille, settled in a modest house in Corona, Queens, where they lived for the remainder of their lives. No one has lived in the house since the Armstrongs, and the house and its furnishings remain very much as they were during Louis and Lucille’s lifetime. Today, the Louis Armstrong House Museum is open to the public, offering guided tours of Louis’s longtime home. On the tour, audio clips from Louis’s homemade recordings are played, and visitors hear Louis practicing his trumpet, enjoying a meal, or talking with his friends. Visitors also get to enjoy an exhibit on Louis’s life and legacy, and the Armstrongs’ beautiful Japanese-inspired garden.</p>
 <p>Attribution: Louis Armstrong House, <a href="http://www.louisarmstronghouse.org/">http://www.louisarmstronghouse.org/</a> </p>
+</div>
+
+<div class="locations">
 <h4>Madison Square Garden</h4>
 <p>4 Pennsylvania Plaza</p>
 <img src="http://s2.dmcdn.net/Wx7u4/280x157-B_w.jpg">
 <p>Madison Square Garden is an indoor arena, located on top of Pennsylvania Station. Many concerts are held there, as well  It is very large, holding up to 20,000 people, and is the third busiest music arena in the world. Many famous musicians have played at Madison Square Garden, including Elton John, Whitney Houston, Billy Joel, Michael Jackson, and Taylor Swift. John Lennon made his last concert appearance at Madison Square Garden before his death in 1980.</p>
 <p>Attribution: Wikipedia, <a href="https://en.wikipedia.org/wiki/Madison_Square_Garden">https://en.wikipedia.org/wiki/Madison_Square_Garden</a></p>
+</div>
 
+<div class="locations">
 <h4>Tin Pan Alley</h4>
 <p>28th street between 5th Avenue and Broadway</p>
 <img src="https://duckduckgo.com/i/3b925012.jpg">
 <p>These buildings were where a collection of New York City music publishers and songwriters who dominated the popular music of the United States in the late 19th century and early 20th century set up shop. A plaque exists on the sidewalk on 28th Street between Broadway and Sixth that commemorates it. The alley continued into the 1950s when earlier styles of American popular music were upstaged by the rise of rock & roll.</p>
 <p>Attribution: Tin Pan Alley, <a href="https://en.wikipedia.org/wiki/Tin_Pan_Alley">https://en.wikipedia.org/wiki/Tin_Pan_Alley</a> </p> 
+</div>
 
+<div class="locations">
 <h4>Hotel Chelsea</h4>
 <p>222 W 23rd St</p>
 <img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">
 <p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>
 <p>Attribution: Chelsea Hotel, <a href="https://en.wikipedia.org/wiki/Hotel_Chelsea">https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p>
+</div>
 
+<div class="locations">
 <h4>Cafe Wha?</h4>
 <p>115 Macdougal St</p>
 <img src="http://es-img1.ciao.com/ies/images/products/normal/610/product-2281610.jpg">
 <p>Cafe Wha? is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
 <p>Attribution: Cafe Wha?, <a href=cafewha.com>cafewha.com</a></p>
+</div>
 
 </body>
 </html>
