--- a/musicmaps.html
+++ b/musicmaps.html
@@ -72,12 +72,19 @@
     </style>
   </head>
   <body>
+    <div class="top">
+    <div class="col-md-6"
     <align="middle">
     <img src="logo.png">
     </align>
+    </div>
+    <div class="col-md-6">
     <h3>How It Works</h3>
     <p>Click on the Map button in the navigation bar, and you’ll see a map with locations marked by musical notes, as well as your current location. If you click on each note, you’ll be able to see some information on each location, including the address, a picture, a short summary, and a link to more information. </p>
+ </div>
+   </div>
     <div id="map"></div>
+    
     <script>
       // Note: This example requires that you consent to location sharing when
       // prompted by your browser. If you see the error "The Geolocation service
