added more locations

--- a/locations.html
+++ b/locations.html
@@ -64,6 +64,14 @@ https://en.wikipedia.org/wiki/Brill_Building</a> </p>
 </div>
 
 <div class="locations">
+<h4>Cafe Wha?</h4>
+<p>115 Macdougal St</p>
+<img src="http://es-img1.ciao.com/ies/images/products/normal/610/product-2281610.jpg">
+<p>Cafe Wha? is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
+<p>Attribution: Cafe Wha?, <a href=cafewha.com>cafewha.com</a></p>
+</div>
+
+<div class="locations">
 <h4>Carnegie Hall</h4>
 <p>881 7th Ave</p>
 <img src="http://www.jessicasandidge.com/uploads/3/6/1/6/3616998/_4320010.jpg">
@@ -78,6 +86,22 @@ http://www.carnegiehall.org/ </a> </p>
 <img src="https://s-media-cache-ak0.pinimg.com/236x/20/0f/32/200f321300b33551bbe721fec3cac67f.jpg">
 <p>CBGB was founded by Hilly Kristal in 1973. The letters stood for Country Bluegrass and Blues, which was what Kristal intended, but instead became a place for punk rock and new wave bands to perform such the Ramones, Blondie, Talking Heads, Misfits, Television, Patti Smith Group, The Dead Boys, The Dictators, The Cramps, and Joan Jett. </p>
 <p>Attribution: CBGB, <a href="http://www.cbgb.com/">http://www.cbgb.com/</a> </p> 
+</div>
+
+<div class="locations">
+<h4>Danceteria</h4>
+<p>30 W. 21st St., New York</p>
+<img src="http://s3.amazonaws.com/cms_uploads/liz/twilo.jpg">
+<p>Danceteria was a well-known four-floor nightclub located in New York City which operated from 1979 until 1986. It catered to a diverse after-hours crowd coming from the downtown rock clubs Mudd Club, Trax, TR3, Chinese Chance and CBGB. Madonna, the Beastie Boys and Keith Haring all began their careers at this famed '80s dance club. It's also where British acts as enduring as the Smiths took their first NYC bows. Now the space is occupied by a showroom for high-end granite and marble products.</p>
+<p>Attribution: Danceteria, <a href=https://en.wikipedia.org/wiki/Danceteria>https://en.wikipedia.org/wiki/Danceteria</a></p>
+</div>
+
+<div class="locations">
+<h4>Hotel Chelsea</h4>
+<p>222 W 23rd St</p>
+<img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">
+<p>The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>"+
+<p>Attribution: Wikipedia, <a href=https://en.wikipedia.org/wiki/Hotel_Chelsea>https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p> 
 </div>
 
 <div class="locations">
@@ -97,6 +121,14 @@ http://www.carnegiehall.org/ </a> </p>
 </div>
 
 <div class="locations">
+<h4>520 Sedgwick Ave</h4>
+<p>1520 Sedgwick Ave, Bronx</p>
+<img src="https://3.bp.blogspot.com/-hEhnUVWqKkg/UTehZRMxr9I/AAAAAAAACRQ/xd1d71xuHgw/s400/220px-1520_Sedwick_Ave.,_Bronx,_New_York1.JPG">'+
+<p>1520 Sedgwick Avenue is a 102-unit apartment building in the Morris Heights neighborhood in the Bronx, New York City. In 2010, The New York Times reported that it is the accepted birthplace of hip hop.  Clive Campbell, later known as DJ Kool Herc, is credited with helping to start hip hop and rap music at a house concert in the building on August 11, 1973. At the concert he was DJing and emceeing in the recreation room of 1520 Sedgwick Avenue. Sources have noted that while 1520 Sedgwick Avenue was not the actual birthplace of hip hop – the genre developed slowly in several places in the 1970s – it was verified to be the place where one of the pivotal and formative events occurred that spurred hip hop culture forward. During a rally to save the building, DJ Kool Herc said, '1520 Sedgwick is the Bethlehem of Hip-Hop culture.'</p>
+<p>Attribution: 1520 Sedgwick Ave, <a href="https://en.wikipedia.org/wiki/1520_Sedgwick_Avenue">https://en.wikipedia.org/wiki/1520_Sedgwick_Avenue</a> </p> 
+</div>
+
+<div class="locations">
 <h4>Tin Pan Alley</h4>
 <p>28th street between 5th Avenue and Broadway</p>
 <img src="https://duckduckgo.com/i/3b925012.jpg">
@@ -104,21 +136,15 @@ http://www.carnegiehall.org/ </a> </p>
 <p>Attribution: Tin Pan Alley, <a href="https://en.wikipedia.org/wiki/Tin_Pan_Alley">https://en.wikipedia.org/wiki/Tin_Pan_Alley</a> </p> 
 </div>
 
-<div class="locations">
-<h4>Hotel Chelsea</h4>
-<p>222 W 23rd St</p>
-<img src="https://artanddiasporablog.files.wordpress.com/2013/08/chelsea-hotel.jpg?w=209&h=157&crop=1">
-<p>	The Hotel Chelsea is a hotel where many famous musicians and writers stayed at one point or another. It is a designated New York City landmark because of all the famous residents that have lived there, and has been featured on TV shows, songs, and books. Notable musicians include the Grateful Dead, Patti Smith, Jimi Hendrix, and Rufus Wainwright. Leonard Cohen once wrote a song called “Hotel Chelsea #2”, and Graham Nash wrote a song called “The Chelsea Hotel”. Many other musicians have also referenced the hotel in their work. </p>
-<p>Attribution: Chelsea Hotel, <a href="https://en.wikipedia.org/wiki/Hotel_Chelsea">https://en.wikipedia.org/wiki/Hotel_Chelsea</a> </p>
+<div class= "locations">
+<h4>Village Vanguard</h4>
+<p>178 7th Ave S, New York</p>
+<img src="https://beatchickwrites.files.wordpress.com/2014/12/village-vanguard-interior.jpg?w=300&h=189">
+<p>The Village Vanguard is a jazz club that was opened on February 22, 1935 by Max Gordon. At first, it featured many forms of music, such as folk music and beat poetry, but it switched to an all-jazz format in 1957. This club has helped unknown musicians, such as Thelonious Monk, launch their careers.Well known musicians such as John Coltrane and Bill Evans were regulars and recorded many songs there as well. In 1989, Max Gordon died. The day after, Lorraine Gordon closed the Vanguard. But the following day, she reopened it and has continued to run the place ever since. She has not made any alterations of any kind, and kept it how it was, how people liked it.</p>"+
+<p>Attribution: Village Vanguard, <a href="https://en.wikipedia.org/wiki/Village_Vanguard">https://en.wikipedia.org/wiki/Village_Vanguard</a> </p> 
 </div>
 
-<div class="locations">
-<h4>Cafe Wha?</h4>
-<p>115 Macdougal St</p>
-<img src="http://es-img1.ciao.com/ies/images/products/normal/610/product-2281610.jpg">
-<p>Cafe Wha? is a club located in Greenwich Village, Manhattan. It was started by Manuel Lee Roth in 1959 in a garage on Macdougal Street. Many musicians performed there, including Bob Dylan, who showed up at age 19 after hitchhiking to New York from Minnesota. Along with Dylan, musicians such as Jimi Hendrix and Bruce Springsteen performed there at the beginning of their careers. Other visitors included Allen Ginsberg and RIchard Pryor. Today, you can visit to hear a variety of music. </p>
-<p>Attribution: Cafe Wha?, <a href=cafewha.com>cafewha.com</a></p>
-</div>
+
 
 </body>
 </html>
